--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,20 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.MainDiv{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.MiddleDiv{
+  border: 1px solid black;
+  width: 30%;
+  padding: 5px 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
